# kannada_mnist

./: .gitignore  README.md  pyproject.toml
kannada_mnist/data/: data_loader.py
kannada_mnist/models/: eval.py  train.py  utils.py
notebooks/: Aman_dataset.ipynb  training_shubham.ipynb  training_udit.ipynb
