[tool.poetry]
name = "kannada_mnist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.3"
torchvision = "^0.4.1"
scikit-learn = "^0.21.3"
pandas = "^0.25.1"
matplotlib = "^3.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
